--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,36 +1,35 @@
 header {
-    margin: 0;
-    width: 100%;
+    width: 100%;;
     background: #f5efec;
     border: none;
-    padding: 20px 100px;
 }
 .header__wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
-    max-width: 1024px;
+    max-width: 1140px;
     min-height: 56px;
     margin: 0 auto;
+    padding: 30px 0;
     gap: 20px;
 }
 .header__logo {
-    width: 50%;
+    width: calc(100% / 3);
 }
 .icons__wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: end;
     align-items: center;
-    padding: 0px;
+    width: calc(100% / 3);
     gap: 34px;
 }
 .icons {
     width: 24px;
     height: 24px;
+    margin: 0 10px;
 }
-.icon-favourite-over {
+/* .icon-favourite-over {
     width: 11px;
     height: 12px;
     font-family: 'Nunito';
@@ -40,28 +39,28 @@ header {
     line-height: 12px;
     text-align: center;
     color: #FFFFFF;
-}
-.icon-favourite {
+} */
+/* .icon-favourite {
     position: absolute;
     left: 15.09%;
     right: 15.09%;
     top: 19.08%;
     bottom: 19.4%;
     background: #FFE44D;
-}
-.icon-cart {
+} */
+/* .icon-cart {
     position: absolute;
     left: 19.3%;
     right: 19.3%;
     top: 30.76%;
     bottom: 14.9%;
     background: #263238;
-}
-.icon-profile {
+} */
+/* .icon-profile {
     position: absolute;
     left: 12.5%;
     right: 12.5%;
     top: 0%;
     bottom: 0%;
     background: #222327;
-}
+} */
