--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,53 +1,59 @@
 header {
-    width: 100%;;
+    width: 100%;
     background: #f5efec;
     border: none;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .header__wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     max-width: 1140px;
     min-height: 56px;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 20px 100px;
     gap: 20px;
 }
 .header__logo {
-    width: calc(100% / 3);
+    width: 100%;
 }
 .icons__wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
-    width: calc(100% / 3);
+    padding: 0px;
     gap: 34px;
 }
 .icons {
     width: 24px;
     height: 24px;
-    margin: 0 10px;
+    position: relative;
+    padding: 3px;
+    font-size: 20px;
 }
-/* .icon-favourite-over {
-    width: 11px;
-    height: 12px;
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 9px;
-    line-height: 12px;
-    text-align: center;
-    color: #FFFFFF;
-} */
-/* .icon-favourite {
+.icons>a>svg {
+    color: #70eec2;
+}
+.icon-favourite-over-num {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    left: 15.09%;
-    right: 15.09%;
-    top: 19.08%;
-    bottom: 19.4%;
-    background: #FFE44D;
-} */
+    top: 0;
+    right: 0;
+    background: #F44336;
+    width: 12px;
+    height: 12px;
+    font-size: 10px;
+    padding: 1px;
+    border-radius: 50%;
+    color: #fff;
+    font-weight: 600;
+}
 /* .icon-cart {
     position: absolute;
     left: 19.3%;
