--- a/src/pages/CatalogPage/index.module.css
+++ b/src/pages/CatalogPage/index.module.css
@@ -20,12 +20,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 10px auto;
 
 }
 .sortCardsItem {
     font-weight: 400;
     line-height: 20px;
+    padding: 5px;
     cursor: pointer;
 }
 .sortCardsItem:hover {
