--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -38,17 +38,18 @@
     align-items: center;
     padding: 2px 8px;
     position: absolute;
-    left: 0px;
-    top: 0;
+    left: -1px;
+    top: -1px;
     width: 58px;
     height: 24px;
     background: #F44336;
-    border-radius: 20px;
+    border-radius: 10px;
     color: #fff;
     font-weight: 800;
     font-size: 16px;
     line-height: 20px;
     z-index: 5;
+
 }
 .card__tag {
     display: flex;
@@ -59,7 +60,7 @@
     position: absolute;
     width: 86px;
     height: 24px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 .tag__type_new {
     right: 0px;
