--- a/src/components/Product/index.module.scss
+++ b/src/components/Product/index.module.scss
@@ -51,9 +51,12 @@
     }
 
     &__card_desc {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
+
+        &_list {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
 
         ul {
             list-style: none;
@@ -72,9 +75,17 @@
     max-width: 488px;
     flex-shrink: 0;
     text-align: justify;
+    
+    button {
+        padding: 8px;
+        background-color: #f5efec;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+    }
 }
 
-.oldPrice {
+.old_price {
     font-size: 20px;
     font-weight: 600;
     line-height: 20px;
@@ -106,8 +117,15 @@
     display: flex;
     flex-direction: column;
     max-width: 50%;
-
+    gap: 10px;
+    
     button {
-        padding: 5px;
+        padding: 8px;
+        background-color: #f5efec;
+        border: none;
+        border-radius: 8px;
     }
+}
+button {
+    cursor: pointer;
 }
