--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -18,5 +18,12 @@
         background-color: #fff;
 
     }
+
+    &__link {
+        padding: 8px;
+        margin: 8px;
+        font-size: 14px;
+        color: #1a1a1a;
+    }
     
 }
