--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -1,18 +1,17 @@
 .modal {
     width: 100%;
     height: 100%;
-    background: rgba(132, 123, 123, .9);
+    background: rgba(183, 178, 178, 0.9);
     position: fixed;
     top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
-    opacity: 0;
+    z-index: 10;
+    display: none;
 
     &.active {
-        opacity: 1;
         display: flex;
         pointer-events: all;
     }
@@ -28,6 +27,7 @@
         align-items: center;
         min-height: 300px;
         min-width: 300px;
+        z-index: 10;
     }
     &__close {
         position: absolute;
