--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -1,5 +1,4 @@
 .form {
-
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -7,7 +6,8 @@
         gap: 10px;
         
     &__input, button {
-        margin: 8px;
+        width: 100%;
+        margin: 0px;
         border: rgb(218, 212, 212);
         border-radius: 8px;
         box-shadow: 1px 2px 1px rgb(218, 212, 212);
@@ -17,6 +17,23 @@
         outline: none;
 
     }
+    &__image {
+        width: 50%;
+        border-radius: 8px;
+
+        &_block {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 500px;
+    }
 
     &__link {
         padding: 8px;
@@ -24,12 +41,28 @@
         font-size: 14px;
         color: #1a1a1a;
     }
-    
+    &__review {
+        
+        &_info {
+            padding: 0 15px;
+            gap: 15px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            &_title {
+                font-weight: 600;
+                font-size: 20px;
+                
+            }
+        }
+    }
 }
 
 h3 {
     text-align: center;
 }
+
 
 textarea {
     font-size: 12px;
