Реализован компонент рейтинга товаров, отзывы

--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -4,6 +4,7 @@
         justify-content: center;
         align-items: center;
         gap: 10px;
+        padding: 20px;
         
     &__input, button {
         width: 100%;
@@ -40,6 +41,17 @@
         margin: 8px;
         font-size: 14px;
         color: #1a1a1a;
+    }
+    &__btn {
+        width: 100%;
+        margin: 15px;
+        border: rgb(218, 212, 212);
+        border-radius: 8px;
+        box-shadow: 1px 2px 1px rgb(218, 212, 212);
+        padding: 8px;
+        color: rgb(99, 94, 94);
+        background-color: #fff;
+        outline: none;
     }
     &__review {
         
