--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -5,6 +5,18 @@
         align-items: center;
         gap: 10px;
         padding: 20px;
+
+        // &__content {
+        //     display: flex;
+        //     flex-direction: row;
+        //     justify-content: space-between;
+        //     align-items: center;
+        //     margin-bottom: 20px; 
+
+        //     &_info {
+        //         width: 100%;
+        //     }
+        // }
         
     &__input, button {
         width: 100%;
@@ -16,6 +28,20 @@
         color: rgb(99, 94, 94);
         background-color: #fff;
         outline: none;
+
+        &_changing {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            &_btn {
+                margin-left: 15px;
+                max-width: 15%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+            }
+        }
 
     }
     &__image {
@@ -33,7 +59,6 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        max-width: 500px;
     }
 
     &__link {
