--- a/src/components/Header/Search/Search.scss
+++ b/src/components/Header/Search/Search.scss
@@ -3,7 +3,7 @@
     background-color: #fff;
     caret-color: #827c79;
     padding: 14px 20px;
-    width: calc(100% / 3);
+    width: 100%;
     font-size: 16px;
     line-height: 20px;
     border: 1px solid transparent;
