--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -6,12 +6,19 @@
 .home {
     &__wrapper {
         width: 100%;
-        height: 100%;
         background: #f5efec;
         border: none;
     }
     &__container {
         max-width: 1140px;
         margin: 0 auto;
+    }
+    &__promo-block {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 30px;
+        background-color: #f5efec;
     }
 }
