Правка стилей на SCSS

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,12 @@
-.container {
-    max-height: 100vh;
-}
-section {
+@import "./styles/variables.scss"
 
-}
-.pageNotFound {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    font-size: 22px;
-    margin: 10px;
-}
+
+
+
+// .pageNotFound {
+//     display: flex;
+//     justify-content: center;
+//     padding: 10px;
+//     font-size: 22px;
+//     margin: 10px;
+// }
