--- a/src/components/Companie`sInfo/style.scss
+++ b/src/components/Companie`sInfo/style.scss
@@ -1,49 +1,45 @@
+@import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
+
 .about {
-    background: #fff;
-    border: none;
-    padding: 30px;
-    text-align: justify;
-    text-indent: 15px;
-    height: calc(100vh - 278px - 96px);
+    @include section($second-color);
 
     img {
-        width: 100%;
-        border-radius: 8px;
+        @include card-image(100%);
+        box-shadow: $box-shadow;
     }
     &__wrapper {
-        max-width: 1140px;
-        min-height: 56px;
-        margin: 0 auto;
-        padding: 20px 0px;
-        gap: 15px;
+        @include content_wrapper;
+        flex-direction: column;
+    }
+    
+    &_title {
+        margin-bottom: 10px;
+        text-indent: 20px;
+        font-weight: 600;
+        font-size: 18px;
+        text-align: justify;
     }
 
     &__content-block {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        @include text-block($ffamily-main, 16px, justify, 400, 20px, 20px);
         gap: 15px;
         margin: 15px;
 
-        h2 {
-            padding: 0;
-            margin: 0;
-        }
-
         img {
-            width: 50%;
-            border-radius: 8px;
+            @include card-image(50%);
+            box-shadow: $box-shadow;
         }
     }
     &__delivery {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
+        @include posed-start;
         gap: 15px;
-
-        h2 {
-            margin: 0;
-            padding: 0;
-        }
     }
+}
+h2, h4 {
+    margin: 0;
+    padding: 0;
+}
+.delivery {
+    height: calc(100vh - $header-height - $footer-height);
 }
