--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -1,13 +1,14 @@
+@import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
+
 .modal {
+    @include posed-center;
     width: 100%;
     height: 100%;
     background: rgba(183, 178, 178, 0.9);
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     z-index: 10;
     display: none;
 
@@ -16,21 +17,17 @@
         pointer-events: all;
     }
 
-
     &__content {
+        @include posed-center;
         position: relative;
-        background: #f5efec;
         padding: 20px;
-        border-radius: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         z-index: 10;
+        max-width: 500px;
+        background: $base-color;
+        border-radius: $b-raduis;
     }
     &__close {
-        position: absolute;
+        @include posed-absolute(20px, 20px);
         cursor: pointer;
-        right: 20px;
-        top: 20px;
     }
 }
