--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
@@ -12,7 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.container {
+/* .container {
   margin: 0 auto;
   width: 100%;
-}
+} */
