--- a/src/pages/NewsPage/style.scss
+++ b/src/pages/NewsPage/style.scss
@@ -1,17 +1,26 @@
+@import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
+
+
 .post-list {
+
     &__wrapper {
-        margin: 0 auto;
-        max-width: 1140px;
-        background: #FFF;
-        border: none;
-        padding: 30px 100px;
-    }
-    &__sorted {
-        border-radius: 12px;
-        box-shadow: 0 2px 4px rgba(40, 41, 61, 0.04);
-        display: flex;
+        @include content_wrapper;
+        @include posed-spaces;
         justify-content: space-between;
-        align-items: center;
-        margin: 10px auto;
+        gap: 15px;
     }
+
+    &__sorted {
+        border-radius: $b-raduis;
+        padding: 15px;
+
+        span {
+            padding: 15px;
+        }
+    }
+}
+
+.base-button {
+    @include base-button(none, $base-color);
 }
