--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -16,7 +16,7 @@
             width: 24px;
             height: 24px;
             color: $warning-color;
-            z-index: 5;
+            z-index: 11;
         }
 
         &_top-left {
@@ -84,7 +84,7 @@
             left: 1px;
             right: -1px;
             top: 0px;
-            transition: all linear .5s;
+            transition: all ease-in-out .5s;
 
             &_grey-effect {
                 transition: all 0.5s linear;
@@ -127,11 +127,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        transition: 1s;
+        transition: 2s;
         z-index: 10;
 
         button {
-            max-height: 40px;
+            height: 40px;
             max-width: 50%;
             margin: 10px;
         }
@@ -190,6 +190,8 @@
         align-items: center;
         gap: 15px;
         width: 100%;
+        height: 40px;
+        margin-bottom: 0;
     }
 
     a {
