--- a/src/components/CartItem/style.scss
+++ b/src/components/CartItem/style.scss
@@ -11,7 +11,7 @@
 
     &__info {
         display: grid;
-        grid-template-columns: repeat(6, calc(100% / 6));
+        grid-template-columns: repeat(7, calc(100% / 7));
         grid-auto-flow: column;
         gap: 15px;
 
@@ -36,10 +36,16 @@
         border-radius: $b-raduis;
         padding: 0 15px;
         cursor: pointer;
+        font-size: 18px;
     }
 }
 table {
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+.icon__remove {
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
