--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -5,6 +5,7 @@
     @include section($base-color);
     box-shadow: $box-shadow;
     max-height: $header-height;
+    padding-bottom: 10px;
     position: sticky;
     top: 0;
     z-index: 100;
