--- a/src/components/Product/index.module.scss
+++ b/src/components/Product/index.module.scss
@@ -55,14 +55,20 @@
         }
     }
 }
-.img__box {
-    width: 100%;
-    height: 100%;
-}
 
 .img {
     @include card-image(100%);
     height: 100%;
+
+    &__box {
+        width: 100%;
+        height: 100%;
+    }
+    &__wrapper {
+        width: 100%;
+        position: relative;
+        overflow: hidden;
+    }
 
     img {
         @include card-image(100%);
@@ -147,4 +153,8 @@
     gap: 20px;
     margin-bottom: 20px;
     height: 54px;
+}
+
+.img__wrapper:hover .img__hover_effect {
+    right: 0;
 }
