--- a/src/pages/CartPage/style.scss
+++ b/src/pages/CartPage/style.scss
@@ -18,6 +18,7 @@
         width: 100%;
         height: 100%;
         gap: 20px;
+
     }
 
     &__list {
@@ -26,9 +27,16 @@
         width: 100%;
         height: 100%;
 
+        &_empty {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            font-size: 20px;
+        }
+
         &_caption {
             display: grid;
-            grid-template-columns: repeat(6, calc(100% / 6));  
+            grid-template-columns: repeat(7, calc(100% / 7));  
             grid-auto-rows: 40px;       
             grid-auto-flow: column;
             justify-content: flex-start;
@@ -45,6 +53,7 @@
         height: 100%;
         border: $border;
         border-radius: 8px;
+
     }
 
     &__total {
@@ -66,6 +75,10 @@
             }
             td {
                 padding: 15px;
+            }
+            &_bonus {
+                width: 100%;
+                text-align: center;
             }
         }
     }
