--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -55,6 +55,7 @@
                 padding: 0;
                 margin: 0 0 30px;
             }
+
         }
 
         &_subscribe {
@@ -114,7 +115,6 @@ li button::after {
     color: $second-color;
     font-size: 14px;
     display: flex;
-    align-items: center;
-    text-align: center;
-    
+    justify-content: center;
+    align-items: center;    
 }
