--- a/src/components/Companie`sInfo/style.scss
+++ b/src/components/Companie`sInfo/style.scss
@@ -84,3 +84,49 @@ h2, h4 {
 .delivery {
     height: calc(100vh - $header-height - $footer-height);
 }
+
+
+.feedback {
+
+    &__content { 
+        display: flex;
+        flex-direction: row;  
+        gap: 15px;
+    }
+
+    &__pass {
+        @include posed-start;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    &__btn {
+        @include base-button($icon-text-color, $base-color);
+        @include posed-center;
+        align-items: center;
+        margin-top: 15px;
+        max-width: 30%;
+    }
+        
+    &__input {
+        border: 1px solid rgb(192, 183, 183);
+        padding: 15px 0;
+        font-family: inherit;
+        width: 100%;
+
+        input, textarea {
+            font-size: 14px;
+            gap: 15px;
+        }
+    }
+
+    &__link {
+        @include icon-link($icon-color, $fsize-main);
+    }
+    textarea {
+        font-family: inherit;
+        width: 100%;
+    }
+}
