--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -22,6 +22,7 @@
     cursor: pointer;
     color: $link-color;
     font-size: $size;
+    transition: all .3s ease;
 }
 @mixin link-hover {
     color: $link-hover;
@@ -71,6 +72,7 @@
     box-shadow: $box-shadow;
     background: $background;
     color: $icon-text-color;
+    transition: all .3s ease;
 }
 
 @mixin button-hover {
@@ -82,6 +84,7 @@
 
 @mixin card-image ($image-width) {
     width: $image-width;
+    height: $card-img-height;
     border-radius: $b-raduis;
 }
 
